checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000131247.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#35: 
> arch/i386/kernel/cpu/mtrr/main.c:225: error: `ipi_handler' undeclared (first

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: include/linux/smp.h:97:
+#define smp_call_function(func,info,retry,wait)	({ 0; })
                               ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: include/linux/smp.h:97:
+#define smp_call_function(func,info,retry,wait)	({ 0; })
                                    ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#66: FILE: include/linux/smp.h:97:
+#define smp_call_function(func,info,retry,wait)	({ 0; })
                                          ^

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000131247.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 3 errors, 1 warnings, 0 checks, 22 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000131247.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
